--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
+testrun/
 output/
 venv/
 temp/
 .rpa/
 .idea/
 .ipynb_checkpoints/
-*/.ipynb_checkpoints/*
 .virtual_documents/
+*/.ipynb_checkpoints/*
 .vscode
 .DS_Store
 *.pyc
 *.zip
-.virtual_documents/
-*/.virtual_documents/*
-testrun/*
 Data.xlsx
+playwright-log.txt
