--- a/conda.yaml
+++ b/conda.yaml
@@ -4,5 +4,10 @@ channels:
 dependencies:
   - python=3.7.5
   - pip=20.1
+  - nodejs=14.2.0
   - pip:
-      - rpaframework==6.7.*
+    - rpaframework==6.7.1
+    - robotframework-browser==2.3.3
+    - robotframework-lsp
+rccPostInstall: 
+  - rfbrowser init
