--- a/robot.yaml
+++ b/robot.yaml
@@ -1,12 +1,12 @@
 tasks:
-  Default:
+  Web store orders:
     command:
       - python
       - -m
       - robot
       - --report
       - NONE
-      - --outputdir
+      - -d
       - output
       - --logtitle
       - Task log
@@ -14,10 +14,10 @@ tasks:
 
 condaConfigFile: conda.yaml
 artifactsDir: output
+ignoreFiles:
+  - .gitignore
 PATH:
   - .
 PYTHONPATH:
   - .
   - libraries
-ignoreFiles:
-    - .gitignore
