--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,19 @@
-testrun/
 output/
 venv/
 temp/
 .rpa/
 .idea/
 .ipynb_checkpoints/
-.virtual_documents/
 */.ipynb_checkpoints/*
+.virtual_documents/
+*/.virtual_documents/*
 .vscode
 .DS_Store
 *.pyc
 *.zip
+*/work-items-out/*
+testrun/*
+.~lock*
+*.pkl
 Data.xlsx
 playwright-log.txt
